Various tweaks to configuration variable processing
Signed-off-by: Ravi Nadahar <nadahar@rediffmail.com>